Relocate JAVA_TOOL_OPTIONS to env; add java launch flags to service file